--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.1.1"
 psycopg2 = "^2.9.10"
 requests = "^2.32.4"
 djangorestframework = "^3.16.0"
+drf-spectacular = "^0.28.0"
 
 
 [tool.poetry.group.dev.dependencies]
