--- a/env.sample
+++ b/env.sample
@@ -1,7 +1,7 @@
 SECRET_KEY=
 DEBUG=
-NAME=
-USER=
-HOST=
-PASSWORD=
-PORT=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
